Index Title Rename

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title> Midterm Question </title>
+    <title> Calendar Event Tracker </title>
     <link rel="stylesheet" href="Midterm Question.css">
     <script type="text/javascript" src="Midterm Question.js">
     </script>
